<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuiltTrip</string>
    <string name="hello_world">Hello world!</string>
    <string name="end">End</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="options">Options</string>
    <string name="action_settings">Settings</string>
    <string name="vehicle_info">How are you getting there?</string>
    <string name="wtf">\?\?\?</string>

    <string name="go">Guilt Me!</string>
    <string name="start">Enter Starting Point</string>
    <string name="destination">Enter Destination</string>
    <string name="spinner_title1">Enter Car Make (Toyota)</string>
    <string name="spinner_title2">Enter Car Model (Camry)</string>
    <string name="spinner_title3">Enter Car Year (2010)</string>
    <string name="spinner_title4">Enter Car Edition (LE)</string>
    <string name="travel_info">Where you going?</string>

    <array name="years">
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
    </array>

</resources>
