<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FormActivity">

    <EditText
        android:id="@+id/start_text"
        android:hint="@string/start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/end_text"
        android:hint="@string/end"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_text"/>

    <TextView
        android:id="@+id/vehicleInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_info"
        android:textSize="30sp"
        android:layout_below="@id/end_text"/>

    <Spinner
        android:prompt="@string/year"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/yearSpinner"
        android:layout_below="@+id/vehicleInfo"
        android:layout_alignParentStart="true" />

    <Spinner
        android:prompt="@string/make"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/makeSpinner"
        android:layout_below="@+id/yearSpinner"
        android:layout_alignParentStart="true" />

    <Spinner
        android:prompt="@string/model"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/modelSpinner"
        android:layout_below="@+id/makeSpinner"
        android:layout_alignParentStart="true" />

    <Spinner
        android:prompt="@string/options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/optionsSpinner"
        android:layout_below="@id/modelSpinner"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_below="@id/optionsSpinner"
        android:id="@+id/go_button"
        android:text="@string/go"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
