<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:background="@drawable/imagemap">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logomap"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/travel_info"
        android:textStyle="bold"
        android:textColorHint="#060000"
        android:textColor="#060000"
        android:id="@+id/textView"
        android:gravity="center"
        android:typeface="sans"
        android:background="#E6DCDCDC"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="20dip"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/start_text"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:hint="@string/start"
        android:textColorHint="#060000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:background="#CC990000"
        android:paddingTop="5dp"
        android:typeface="sans"
        android:paddingBottom="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/end_text"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:hint="@string/destination"
        android:textColorHint="#060000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:background="#CCCC0000"
        android:typeface="sans"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/start_text"
        android:layout_marginTop="10dip"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/start_text" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vehicle_info"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#060000"
        android:textColorHint="#060000"
        android:background="#E6DCDCDC"
        android:id="@+id/textView2"
        android:typeface="sans"
        android:layout_below="@+id/end_text"
        android:layout_marginTop="40dip"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/yearSpinner"
        android:gravity="center"
        android:background="#CC990000"
        android:prompt="@string/spinner_title1"
        android:spinnerMode="dropdown"
        android:typeface="sans"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView2" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/makeSpinner"
        android:background="#CCCC0000"
        android:gravity="center"
        android:typeface="sans"
        android:layout_centerVertical="true"
        android:spinnerMode="dropdown"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/yearSpinner" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/modelSpinner"
        android:background="#CCFF6666"
        android:typeface="sans"
        android:spinnerMode="dropdown"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/makeSpinner" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/optionsSpinner"
        android:background="#CCFFCCCC"
        android:gravity="center"
        android:typeface="sans"
        android:spinnerMode="dropdown"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/modelSpinner" />

    <Button
        android:id="@+id/go_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/go"
        android:background="#CCDA3434"
        android:textStyle="bold"
        android:textColor="#DCDCDC"
        android:longClickable="false"
        android:clickable="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:typeface="sans"
        android:layout_below="@id/optionsSpinner"
        android:layout_centerInParent="true"/>

</RelativeLayout>
